--- a/pages/english/contactAndPartner.html
+++ b/pages/english/contactAndPartner.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="../../styles/slick.css" />
-  <link rel="stylesheet" href="../../styles/slick-theme.css" />
 </head>
 
 <body class="bodyContact">
@@ -17,7 +15,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -25,7 +23,7 @@
           </div>
           <div class="lang_header">
             <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -36,11 +34,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -52,13 +50,13 @@
     <div class="row">
       <div class="columns large-6 medium-6 small-12">
         <div class="contactHome">
-          <h2>Nous contacter</h2>
+          <h2>Contact us</h2>
           <h4>La Récréation</h4>
           <p id="contactAdressHome">Le Bourg
             <br/>46250 Les Arques</p>
-          <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
-          <h2>Horaires et jours d'ouverture</h2>
-          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
+          <p id="contactPhoneHome">Phone : 05 65 22 88 08</p>
+          <h2>Opening hours and days</h2>
+          <p><font color="#CC76CA">Monday</font> to <font color="#CC76CA">Sunday</font> from 12h to 15h15 and from 19h30 to 21h15. Closed on Wednesdays and Thursdays.</p>
         </div>
       </div>
 
@@ -71,38 +69,36 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextContact">
-          <h2>NOS PARTENAIRES</h2>
-          <p>Voulant respecter notre région et la mettre en valeur, nous travaillons avec des partenaires locaux qui permettent des produits de qualité.
-            <br/> Nos légumes d'été ou encore nos herbes aromatisées viennent du potager d'à côté ! Un potager entretenu par un ancien élève de l'école qui donne du cœur à l'ouvrage et donc du cœur à nos légumes.
+          <h2>OUR PARTNERS</h2>
+          <p>Wanting to respect our region and highlight it, we work with local partners that allow quality products.
+            <br/> Our summer vegetables or our flavored herbs come from the vegetable garden next door! A vegetable garden maintained by a former student of the school who gives heart to the work and therefore of the heart to our vegetables.
 
-            <br/> Pour nos viandes ou poissons ? Ils sont directement choisis par le gérant de l'établissement de sorte à respecter notre engagement auprès des producteurs locaux ou français !
-
-            <br/> Pour finir sur une bonne note, notre carte de vins vous proposera une grande diversités pour accompagner tous nos mets. Des vins de régions comme le goûteux Château Lamartine et ses trois déclinaisons.
+            <br/> For our meat or fish? They are directly chosen by the manager of the establishment so as to respect our commitment to local or French producers!
+            <br/> To finish on a good note, our wine list will offer you a great diversity to accompany all our dishes. Wines from regions such as the tasty Château Lamartine and its three declensions.
             <br/>
-            <br/> La Recreation et ses partenaires n'attendent plus que vous !
+            <br/> La Récréation and its partners are waiting for you!
             <br/>
-            <br/> Liste des partenaires
+            <br/> List of partners
             <br/>
             <br/> Voisin du restaurant : ( nom à vérifier )
-            <br/> Mets : Entreprise Métro Toulouse
-            <br/> Vins : à rajouter des que je suis chez moi .</p>
+            <br/> Dishes : Entreprise Métro Toulouse
+            <br/> Wine : à rajouter des que je suis chez moi .</p>
         </div>
       </div>
     </div>
   </section>
 
   <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -113,7 +109,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="Page Mentions légales">LEGAL MENTIONS</a>
           </div>
         </div>
       </div>
