--- a/pages/english/environment.html
+++ b/pages/english/environment.html
@@ -15,15 +15,15 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+      <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
+<a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -34,11 +34,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -50,14 +50,15 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextEnvironment">
-          <h2>L’heure de La Récréation a sonné !</h2>
+          <h2>The hour of Recreation rang!</h2>
           <p>
-            Un restaurant dépaysant, complètement atypique dans une ancienne école de l’entre-deux guerres vous invite à découvrir sa cuisine dans le petit village « Les Arques ». Salle de classes, cour de récréation avec préau ont été transformés en jardin luxuriant, où l’on déjeune sous le marronnier ou sous les platanes mûriers. Le soir venu, l’éclairage met en relief les anciens murs de pierres de cette place idyllique et chargée d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des quatre coins du monde qui garantie des légumes frais issus du potager jouxtant le restaurant.
-            <br/> Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
+            An exotic restaurant, completely atypical in a former school between the wars invites you to discover its cuisine in the small village "Les Arques". Classroom, playground with courtyard have been transformed into a lush garden, where one lunch under the chestnut tree or under the mulberry trees. In the evening, the lighting emphasizes the ancient stone walls of this idyllic and historic place where artists come to exhibit. An inventive cuisine in the spirit of the site, rich in flavors and surprises from all over the world, guaranteeing fresh vegetables from the vegetable garden adjoining the restaurant.
+            <br/> The restaurant organizes regular cooking classes and develops a catering service at home.
             <br/>
-            <br/> Plus qu’un bon restaurant, c’est un voyage.
+            <br/> More than a good restaurant, it's a trip.
+
             <br/>
-            <br/> Le restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans la région « Midi Pyrénées » et plus précisément dans le département du Lot. Ce village se trouve à 26 km de Cahors et 26 km de Gourdon. Au sud du Périgord et au sud-est de la Dordogne, le village est classé pour l'église Saint Laurent, les Fresques de Saint Andrée, l'ancien doyenneté et sa tour. Les Arques est également connu pour son musée consacré à Ossip Zadkine, les ateliers des Arques faisant venir chaque année une douzaine d'artistes de toute l'Europe, et bien sûr le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 habitants.
+            <br/> The restaurant is located in the town of Les Arques, a small village located in the south of France in the region "Midi Pyrenees" and more precisely in the department of Lot. This village is 26 km from Cahors and 26 km from Gourdon. To the south of the Périgord and to the south-east of the Dordogne, the village is classified for the Saint Laurent church, the frescoes of Saint Andrée, the old doyenneté and its tower. Les Arques is also known for its museum devoted to Ossip Zadkine, the workshops of Les Arques bringing each year a dozen artists from all over Europe, and of course the restaurant La Récréation. What an excitement in such a small village of 217 inhabitants.
 
           </p>
         </div>
@@ -73,12 +74,12 @@
         </div>
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextEnvironment">
-            <h2>LE MUSEE ZADKINE</h2>
-            <p>Les Arques est un petit village situé dans le lot.
+            <h2>THE ZADKINE MUSEUM</h2>
+            <p>Les Arques is a small village located in the lot.
               <br/>
-              <br/>Au XIème siècle s’est installé sur la crête un village autour d’un Prieuré et dans la vallée une série d’édifices dédiés à des activités artisanales.
-              <br/> De tout cela, il reste un patrimoine architectural très divers tel que l’église romane, les moulins, les pigeonniers, les fours et autres chapelles.
-              <br/> À l’abri des grandes voies de circulation automobile, même locales, le village a attiré dans les années 1930 un grand sculpteur, Zadkine dont, depuis 26 ans, un musée perpétue le souvenir. Le musée Zadkine a été conçu comme un centre de vie culturelle. C'est dans ce village que sont présentés de prestigieux documents et oeuvres qui témoignent de la création de l'artiste : Grands bois, bronzes puissants, gravures, photos. Cinq grandes sculptures animent le village.</p>
+              <br/>In the eleventh century a settlement was established on the ridge around a Priory and in the valley a series of buildings dedicated to craft activities.
+              <br/> Of all this, there remains a very diverse architectural heritage such as the Romanesque church, mills, pigeon houses, ovens and other chapels.
+              <br/> In the 1930s, the village attracted a great sculptor, Zadkine, whose 26-year-old museum has perpetuated the memory. The Zadkine Museum was conceived as a center of cultural life. It is in this village that are presented prestigious documents and works that testify to the creation of the artist: Great woods, powerful bronzes, engravings, photos. Five large sculptures animate the village.</p>
           </div>
         </div>
       </div>
@@ -88,13 +89,13 @@
       <div class="row">
         <div class="columns large-7 medium-7 small-12">
           <div class="thirdTextEnvironment">
-            <h2>LA VALLÉE DE LA MASSE ET LE MARAIS DES ARQUES</h2>
+            <h2>THE VALLEY OF THE MASS AND THE MARK OF THE ARKS</h2>
             <p>
-              L’aménagement d’une zone dite “Espace Naturel Sensible” propose une visite des zones humides du village et le balisage de différents chemins de randonnée.
-              <br/> Cet espace bénéficie d’un programme de gestion et de mise en valeur mené par le Conseil général du Lot, en partenariat avec les collectivités locales et différents acteurs (propriétaires, exploitants agricoles, chasseurs, randonneurs,…).
+              The development of an area known as "Sensitive Natural Area" offers a visit to the wetlands of the village and the marking of various hiking trails.
+              <br/> This area benefits from a management and development program carried out by the General Council of Lot, in partnership with local authorities and various stakeholders (owners, farmers, hunters, hikers, etc.).
               <br/>
-              <br/> Son patrimoine culturel et historique d’un grand intérêt (moulins de la Masse, activité sidérurgique médiévale, chapelle Saint-André,…) continue d’attirer un grand nombre de touristes.
-              <br/> Pour découvrir cette zone humide, un circuit d’interprétation de 4,5 km a été construit en partie sur caillebotis. Ce circuit au départ du bourg des Arques, est équipé de bornes implantées tout au long du parcours. En y glissant les fiches du guide découverte, ces bornes se transforment en table d’orientation et permettent de comprendre les spécificités des espaces qui s’offrent aux randonneurs. Les Fresques de Saint Andrée, l’édifice pourrait être daté du XIème siècle d’après le plan, les techniques de construction et les peintures fin du XVème siècle.
+              <br/> Its cultural and historical heritage of great interest (mills of the Masse, medieval ironwork, chapel Saint-André, ...) continues to attract a large number of tourists.
+              <br/> To discover this wetland, a 4.5 km interpretation circuit was built partly on grating. This circuit starting from the village of Arques, is equipped with terminals implanted along the route. By slipping the cards of the guide discovered, these terminals turn into orientation table and allow to understand the specificities of the spaces available to hikers. The Frescoes of Saint Andrew, the building could be dated to the 11th century according to the plan, construction techniques and paintings end of the 15th century.
             </p>
           </div>
         </div>
@@ -108,18 +109,17 @@
 
   </section>
 
-  <footer>
-
+ <footer>
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="Page Mentions légales">LEGAL MENTIONS</a>
           </div>
         </div>
       </div>
