--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>La Récréation</title>
-  <link rel="stylesheet" href="styles/foundation.min.css" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="../../styles/foundation.min.css" />
+  <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="styles/slick.css" />
-  <link rel="stylesheet" href="styles/slick.css" />
 </head>
 
 <body class="bodyIndex">
@@ -17,15 +15,15 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            <img src="images/phone.png" alt="logo téléphone" />
+            <img src="../../images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="index.html" title="passage à la partie française du site"><img src="images/frenchFlag.png" alt="french flag" /></a>
-            <a href="pages/english/index.html" title="Passage à la partie anglaise du site"><img src="images/englishFlag.png" alt="english flag" /></a>
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
+            <a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -36,11 +34,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="index.html">Home page</a></li>
-              <li><a class="lineUnderLink" href="pages/french/menuAndWine.html">Menus and wine list</a></li>
-              <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
-              <li><a class="lineUnderLink" href="pages/french/environment.html">Environment</a></li>
-              <li><a class="lineUnderLink" href="pages/french/contactAndPartner.html">Contact and partners</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -53,12 +51,12 @@
       <div class="columns large-6 medium-12 small-12">
         <div class="firstTextHome">
           <h2>The hour of <font color="#CC76CA">La Récréation</font> rang!<br/><br/></h2>
-          <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.
+          <p>An exotic restaurant, completely atypical in an old school between the two wars. Classroom, playground with courtyard transformed into a lush garden, where one lunch under the chestnut tree or the mulberry trees.
             <br/>
-            <br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
+            <br/>In the evening, lighting illuminates the ancient stone walls of this idyllic and historic place where artists come to exhibit. An inventive cuisine in the spirit of the site, rich in flavors and surprises from all over the world guaranteeing fresh vegetables from the vegetable garden adjacent to the restaurant. The restaurant organizes regular cooking classes and develops a catering service at home.
             <br/>
             <br/>
-            <br/>Plus qu’un bon restaurant, c’est un voyage.</p>
+            <br/>More than a good restaurant, it's a trip.</p>
         </div>
       </div>
 
@@ -66,10 +64,9 @@
       <div class="columns large-6 medium-12 small-12">
         <div class="slider">
           <figure>
-            <img src="images/crevetteSesame.jpg" alt="Crevette sésame">
-            <img src="images/douceurMangue.jpg" alt="Douceur de mangue">
-            <img src="images/biscuitChoco.jpg" alt="Plat">
-            <img src="images/biscuitChoco.jpg" alt="Biscuit au chocolat">
+            <img src="../../images/slider1.jpg" alt="Crevette sésame">
+            <img src="../../images/slider2.jpg" alt="Douceur de mangue">
+            <img src="../../images/slider3.jpg" alt="Biscuit au chocolat">
           </figure>
         </div>
       </div>
@@ -78,7 +75,7 @@
       <div class="columns large-7 medium-12 small-12">
         <div class="videoHome">
           <video width="520" height="340" controls>
-            <source src="images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
+            <source src="../../images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
           </video>
         </div>
       </div>
@@ -86,8 +83,8 @@
       <div class="columns large-5 medium-12 small-12">
         <div class="secondTextHome">
           <p>
-            Le Restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans le département du Lot région midi pyrénées. A 26 km de Cahors et 26 km de Gourdon.Au sud du périgord et au sud-est de la Dordogne Le village est classé pour l'église Saint Laurent les Fresques de Saint Andrée, l'ancien doyénée et sa tour.
-            <br/>Les Arques sont également connus pour son musée consacré à Ossip Zadkine, les ateliers des Arques qui font venir chaque année une douzaine d'artistes venant de toute l'Europe, et bien sur le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 Habitants.
+            The restaurant is located in the town of Arques, a small village located in the south of France in the department of Lot region midi pyrenees. At 26 km from Cahors and 26 km from Gourdon. In the south of the perigord and south-east of the Dordogne The village is classified for the church Saint Laurent the Frescoes of Saint Andrée, the former dean and its tower.
+            <br/>Les Arques is also known for its museum devoted to Ossip Zadkine, the workshops of Les Arques which bring every year a dozen artists from all over Europe, and of course the restaurant La Récréation. What an excitement in such a small village of 217 inhabitants.
           </p>
         </div>
       </div>
@@ -95,13 +92,13 @@
     <div class="row">
       <div class="columns large-6 medium-6 small-12">
         <div class="contactHome">
-          <h2>Nous contacter</h2>
+          <h2>Contact us</h2>
           <h4>La Récréation</h4>
           <p id="contactAdressHome">Le Bourg
             <br/>46250 Les Arques</p>
-          <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
-          <h2>Horaires et jours d'ouverture</h2>
-          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
+          <p id="contactPhoneHome">Phone : 05 65 22 88 08</p>
+          <h2>Opening hours and days</h2>
+          <p><font color="#CC76CA">Monday</font> to <font color="#CC76CA">Sunday</font> from 12h to 15h15 and from 19h30 to 21h15. Closed on Wednesdays and Thursdays.</p>
         </div>
       </div>
 
@@ -120,11 +117,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -135,11 +132,11 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="Page Mentions légales">LEGAL MENTIONS</a>
           </div>
         </div>
       </div>
     </div>
   </footer>
-  <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="../../scripts/main.js"></script>
 </body>
