--- a/pages/english/kitchenAndTakeaway.html
+++ b/pages/english/kitchenAndTakeaway.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="../../styles/slick.css" />
-  <link rel="stylesheet" href="../../styles/slick-theme.css" />
 </head>
 
 <body class="bodyKitchen">
@@ -17,7 +15,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -25,7 +23,7 @@
           </div>
           <div class="lang_header">
             <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+<a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -36,11 +34,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -59,8 +57,15 @@
         </div>
         <div class="columns large-5 medium-12 small-12">
           <div class="firstTextKitchen">
-            <h2>NOS COURS DE CUISINE</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium voluptatibus, aliquam accusamus! Ratione fuga, maxime unde iusto voluptates porro possimus eveniet sint esse. Quam eveniet cumque illum possimus sunt ab.</p>
+            <h2>OUR KITCHEN COURSES</h2>
+            <p>Our chef offers cooking classes for a morning and a lunchtime lunch. Come and learn to cook exotic flavors or traditional dishes revisited by our chef Rémy Cougnac during these 3 hours cooking classes. Create with us our ravioli of coral lobster sauce, crispy Saint Jacques with the hair of angels, supremes of boneless quails or even a mango sweet heart flowing passion. You will attend a cocktail creation that will allow you to accompany your gourmet creations of the noon.
+              <br/>
+              <br/>Prices for cooking classes:
+              <br/>
+              <br/> 76 €: cooking lesson of 2h30 + cocktail creation + lunch
+              <br/> 40 €: accompanying lunch.
+              <br/>
+              <br/> Do not hesitate to contact us for additional information on 05 65 22 88 08.</p>
           </div>
         </div>
       </div>
@@ -70,10 +75,10 @@
       <div class="row">
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextKitchen">
-            <h2>LE TRAITEUR</h2>
-            <p>Créateur de nouveaux concepts, pour rendre uniques vos événements notre traiteur met à votre disposition son expérience et son savoir-faire en cuisine et vous fait découvrir des créations uniques qui surprendront et enchanteront vos invités.
-              <br/> Notre spécialité dans le domaine traiteur reste indéniablement la “verrine", idéale pour les cocktails dînatoires, les buffets et autres événements en tout genre.
-              <br/> Une logistique moins contraignante pour le client, et la possibilité de faire un véritable voyage de multiples saveurs salées et sucrées. Enfin, une grande facilité pour s'adapter à toutes les bourses.
+            <h2>Caterer</h2>
+            <p>Creator of new concepts, to make unique your events our caterer puts at your disposal his experience and his know-how in cooking and makes you discover unique creations that will surprise and enchant your guests.
+              <br/> Our specialty in the catering business is undeniably the "verrine", ideal for cocktail dinners, buffets and other events of any kind.
+              <br/> A logistics less binding for the customer, and the possibility of making a real journey of multiple savory and sweet flavors. Finally, a great facility to adapt to all scholarships.
             </p>
           </div>
         </div>
@@ -89,18 +94,17 @@
 
   </section>
 
-  <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
+<footer>
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -111,7 +115,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="Page Mentions légales">LEGAL MENTIONS</a>
           </div>
         </div>
       </div>
