--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -94,7 +94,8 @@
               <br/> Cet espace bénéficie d’un programme de gestion et de mise en valeur mené par le Conseil général du Lot, en partenariat avec les collectivités locales et différents acteurs (propriétaires, exploitants agricoles, chasseurs, randonneurs,…).
               <br/>
               <br/> Son patrimoine culturel et historique d’un grand intérêt (moulins de la Masse, activité sidérurgique médiévale, chapelle Saint-André,…) continue d’attirer un grand nombre de touristes.
-              <br/> Pour découvrir cette zone humide, un circuit d’interprétation de 4,5 km a été construit en partie sur caillebotis. Ce circuit au départ du bourg des Arques, est équipé de bornes implantées tout au long du parcours. En y glissant les fiches du guide découverte, ces bornes se transforment en table d’orientation et permettent de comprendre les spécificités des espaces qui s’offrent aux randonneurs. Les Fresques de Saint Andrée, l’édifice pourrait être daté du XIème siècle d’après le plan, les techniques de construction et les peintures fin du XVème siècle.
+              <br/> Pour découvrir cette zone humide, un circuit d’interprétation de 4,5 km a été construit en partie sur caillebotis. Ce circuit au départ du bourg des Arques, est équipé de bornes implantées tout au long du parcours. En y glissant les fiches du guide découverte, ces bornes se transforment en table d’orientation et permettent de comprendre les spécificités des espaces qui s’offrent aux randonneurs. Les Fresques de Saint Andrée, l’édifice pourrait être daté du XIème siècle d’après le plan, les techniques de construction et les peintures fin du XVème siècle.<br/>
+              L’ancienne école fermée depuis 1986 continue à sonner tous les midis et tous les soirs pour accueillir de fins gourmets au restaurant « LA RECREATION », une institution dans le canton faisant partie des « Bonnes Tables du lot ».  
             </p>
           </div>
         </div>
@@ -115,11 +116,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
