--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="../../styles/foundation.min.css" />
   <link rel="stylesheet" href="../../styles/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="../../styles/slick.css" />
-  <link rel="stylesheet" href="../../styles/slick-theme.css" />
 </head>
 
 <body class="bodyKitchen">
@@ -60,7 +58,14 @@
         <div class="columns large-5 medium-12 small-12">
           <div class="firstTextKitchen">
             <h2>NOS COURS DE CUISINE</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium voluptatibus, aliquam accusamus! Ratione fuga, maxime unde iusto voluptates porro possimus eveniet sint esse. Quam eveniet cumque illum possimus sunt ab.</p>
+            <p>Notre chef vous propose des cours de cuisine le temps d’une matinée et d’un déjeuner le midi. Venez apprendre à cuisiner des saveurs exotiques ou encore des plats traditionnels revisités par notre chef Rémy Cougnac durant ces cours de cuisine de 3 heures. Créer avec nous nos raviolis de homard sauce corail, des croustillants de saint Jacques aux cheveux d’anges, des suprêmes de cailles désossés ou encore une douceur de mangue au coeur coulant passion. Vous assisterez à une création de cocktail qui vous permettra d’accompagner vos créations gastronomiques du midi.
+              <br/>
+              <br/> Tarifs cours de cuisine :
+              <br/>
+              <br/> 76€ : cours de cuisine de 2h30 + création de cocktail + déjeuner du midi
+              <br/> 40€ : accompagnant au déjeuner du midi.
+              <br/>
+              <br/> N’hésitez pas à nous contacter pour des renseignements supplémentaires au 05 65 22 88 08.</p>
           </div>
         </div>
       </div>
@@ -96,11 +101,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+            <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
