--- a/pages/english/legalMentions.html
+++ b/pages/english/legalMentions.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
+          <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
             <img src="../../images/phone.png" alt="logo téléphone" />
@@ -23,7 +23,7 @@
           </div>
           <div class="lang_header">
             <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -34,11 +34,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/index.html">Home page</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/menuAndWine.html">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/environment.html">Environment</a></li>
+              <li><a class="lineUnderLink" href="../../pages/english/contactAndPartner.html">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -49,75 +49,75 @@
   <section id="legalMentions">
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
-        <h1>MENTIONS LEGALES</h1>
-        <p>Conformément aux dispositions de l’article 6 III-1 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous vous informons que :</p>
+        <h1>LEGALS MENTIONS</h1>
+        <p>In accordance with the provisions of Article 6 III-1 of Law No. 2004-575 of June 21, 2004 for confidence in the digital economy, we inform you that :</p>
         <p>
-          Le présent site est édité par :
+          This site is edited by:
+
         </p>
         <p>
           LA RECREATION
-          <br/> Adresse du siège social :Le Bourg - 46250 Les Arques
-          <br/> Au capital social de :205.000,00 EURO
-          <br/> Numéro RCS :Cahors B 529 174 310
-          <br/> Téléphone :0565228808
+          <br/> Registered Address :Le Bourg - 46250 Les Arques
+          <br/> To the share capital of :205.000,00 EURO
+          <br/> Number RCS :Cahors B 529 174 310
+          <br/> Phone :0565228808
           <br/> E-Mail : lsoupirot@gmail.com
-          <br/> Numéro SIREN :529174310
+          <br/> SIREN number :529174310
         </p>
         <p>
-          Le directeur de la publication est : M. SOUPIROT LUDOVIC en qualité de dirigeant.
+          The editor is: Mr. SOUPIROT LUDOVIC as a leader.
         </p>
         <p>
           <!---- MODIFIER CA -->
-          L’hébergeur du site assurant le stockage direct et permanent est :
+          The host of the site ensuring the direct and permanent storage is:
           <br/>OVH
-          <br/>SAS au capital de 10 069 020 €
+          <br/>SAS with capital of 10 069 020 €
           <br/>RCS Lille Métropole 424 761 419 00045
           <br/>Code APE 2620Z
           <br/>N° TVA : FR 22 424 761 419
-          <br/>Siège social : 2 rue Kellermann - 59100 Roubaix - France.
-          <br/>Directeur de la publication : Octave KLABA
+          <br/>Head office : 2 rue Kellermann - 59100 Roubaix - France.
+          <br/>Publication Director : Octave KLABA
         </p>
         <p>
-          Conformément à la loi Informatique et libertés du 6 janvier 1978 modifiée en 2004, les données à caractère personnel sont destinées à l’exploitant du site et leur usage conforme aux finalités déclarées à la Cnil.
+          In accordance with the Data Protection Act of 6 January 1978 amended in 2004, the personal data are intended for the site operator and their use in accordance with the stated purposes of the CNIL.
         </p>
         <p>
-          Les données sont destinées à la société LA RECREATION responsable du traitement.
+          The data are intended for the LA RECREATION company responsible for the treatment.
         </p>
         <p>
-          Les informations indispensables sont signalées par un astérisque dans le formulaire. A défaut, il ne pourra être répondu à la demande de l’utilisateur. Les autres informations demandées, pour lesquelles la réponse de l’utilisateur est facultative, sont destinées à mieux connaitre l’utilisateur et à améliorer les services proposés. Conformément aux dispositions de la « loi Informatique et libertés » du 6 janvier 1978 modifiée en 2004, l’utilisateur dispose d’un droit d’accès, de rectification et de suppression des données à caractère personnel le concernant. La mise en œuvre de ces droits est possible par simple courriel envoyé à l’adresse figurant ci-dessus.
+          The required information is marked with an asterisk in the form. Failure to do so will not be possible at the request of the user. The other information requested, for which the user's response is optional, is intended to better know the user and improve the services offered. In accordance with the "Data Protection Act" of 6 January 1978 amended in 2004, the user has the right to access, rectify and delete personal data concerning him / her. Implementation of these rights is possible by simple e-mail sent to the above address.
         </p>
         <p>
-          L’utilisateur dispose également d’un droit d’opposition au traitement de ses données pour des motifs légitimes ainsi qu’un droit d’opposition à ce que ces données soient utilisées à des fins de prospection commerciale.
+          The user also has the right to object to the processing of his data for legitimate reasons as well as a right to object to the use of this data for the purposes of commercial prospection.
         </p>
         <p>
-          L’utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation.Le paramétrage du logiciel de navigation permet d’informer de la présence de cookie et éventuellement, de la refuser de la manière décrite à l’adresse suivante <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
+          The user is informed that during his visits to the site, a cookie can be installed automatically on his software of navigation. The setting of the software of navigation makes it possible to inform of the presence of cookie and possibly to refuse it Described at the following address: <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
         </p>
         <p>
-          La structure générale et l’architecture du site, ainsi que chacun de ses éléments, notamment les logiciels, textes, images animées ou non, sont protégés par le droit d’auteur. A ce titre, toute utilisation et notamment toute reproduction totale ou partielle du site ou de ses éléments, ainsi que tout transfert de ses éléments vers un autre site sans l’accord écrit et exprès des ayants droit est interdite et constituerait une contrefaçon sanctionnée par les articles L. 335-2 et suivants du Code de la propriété intellectuelle.
+          The general structure and the architecture of the site, as well as each of its elements, in particular the software, texts, moving images or not, are protected by the copyright. As such, any use and in particular any total or partial reproduction of the site or its elements and any transfer of its elements to another site without the written and express agreement of the rightful owners is prohibited and would constitute an infringement sanctioned by the Articles L. 335-2 et seq. Of the Intellectual Property Code.
         </p>
         <p>
-          Les marques (semi-figuratives ou non), ainsi que les logos figurant sur le site sont protégés.</p>
+          The marks (semi-figurative or not), as well as the logos appearing on the site are protected.</p>
         <p>
-          Toute reproduction totale ou partielle de ces marques ou de ces logos effectuée à partir des éléments du site sans l'autorisation des ayants droit est donc prohibée.
+          Any total or partial reproduction of these marks or logos made from the elements of the site without the authorization of the beneficiaries is therefore prohibited.
         </p>
         <p>
-          L’utilisateur ne peut mettre en place un hyperlien en direction du site sans autorisation expresse et préalable.</p>
+          The user can not set up a hyperlink to the site without express prior authorization.</p>
       </div>
     </div>
   </section>
 
   <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
-              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
-              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
@@ -128,7 +128,7 @@
         </div>
         <div class="columns large-4 medium-4 small-4">
           <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <a class="lineUnderLink" href="../../pages/english/legalMentions.html" title="Page Mentions légales">LEGAL MENTIONS</a>
           </div>
         </div>
       </div>
